--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-    <title>Click retargeting code generator</title>
+    <title>Retargeting Code Generator</title>
 
     <link rel="stylesheet" type="text/css" href="stylesheet/style.css" />
     <link rel="stylesheet" type="text/css" href="stylesheet/jquery_ui.css" />
@@ -20,9 +20,9 @@
         <div id='header'>
         </div>
         <div id='content'>
-            <h2>Retargeting code generator</h2>
             <div class='box'>
                 <div class='filter'>
+                <h1>Retargeting code generator</h1>
                     <div id='left'>
                         <div class="input">
                             <label for='CodeGeneratorUrl'>Enter your target url</label>
@@ -43,7 +43,27 @@
                             <input class='copy' type='submit' value='Copy to clipboard'/>
                         </div>
                     </div>
-                </div>
+                </div>    
+            </div>
+            <div class="filter">
+            <h2>Markierung der Webseiten Besucher</h2>
+            <p>Es gibt drei Möglichkeiten Besucher für das Retargeting zu markieren. Mittels eines JavaScripts, eines Pixels, oder einer Klick-URL. Nutzen Sie bitte den oben befindlichen Generator, um einen Code-Schnipsel oder eine URL zusammenzubauen.</p>
+            <p>Die Javascript-Einbindung führt wie die Pixeleinbindung beim Seitenaufruf zu einer Markierung des Besuchers mit den gewünschten Retargeting-Keywords. Die Javascript-Variante ist jedoch flexibler und dieser sollte, sofern das möglich ist, der Vorzug gegeben werden.</p>
+            <p>Die Klick-URL kann an einen beliebigen Link angefügt werden. Sie besteht aus einer frei wählbaren Ziel-URL und den entsprechenden Retargeting-Keywords. Klickt ein Besucher auf den Link wird er zuerst markiert und daraufhin an die  Ziel-URL weitergeleitet.</p> 
+            <p>Wo Sie das JavaScript, den Pixel oder die Click-URL einbinden und welche Informationen sie speichern wollen, sprechen Sie bitte mit Ihrem Ansprechpartner bei Adcloud ab. Diesen können Sie auch konsultieren, wenn eine HTTPS-Variante gewünscht ist.</p>
+            <h2>Keywords</h2>
+            <p>Die Keywords können frei gewählt werden. Wird ein Benutzer mit einem Keyword markiert, können Kampagnen zu diesem Keyword ausgeliefert werden. Wird ein Benutzer mit mehreren Keywords markiert können verschiedene Kampagnen präsentiert werden.</p>
+            <p>Grundsätzlich gilt: Sobald ein Keyword des Benutzers mit einem Keyword einer Kampagne übereinstimmt, kann diese Kampagne präsentiert werden. Ob die Kampagne tatsächlich angezeigt wird, ist abhängig von der jeweiligen Performance.</p>
+            <p>Zur Fehlerminimierung und Performancesteigerung empfehlen wir folgende Tipps bei der Keyword Wahl:</p>
+            <ul>
+            <li>Die Anzahl der Keywords sollte möglichst gering sein.</li>
+            <li>Die Länge der Keywords sollte möglichst kurz sein.</li>
+            <li>Schreiben Sie alle Keywords klein.</li>
+            <li>Vermeiden Sie Umlaute und Sonderzeichen.</li>
+            <li>Keywords sollten ein Kunden spezifisches Präfix beinhalten z.B "apl-" für Apple</li>
+            </ul>
+            
+            <p><strong>Keywords und Einbauort 1:1 an Adcloud senden. Der Versand der Werbemittel erfolgt (unter Angabe der Kampagnen-ID/des Kampagnen-Namens) an: service@adcloud.com und Ihren Kundenbetreuer.</strong></p>
             </div>
         </div>
         <div id='footer' class='hidden'>
