added rudimentary url validation

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
         <div id='footer' class='hidden'>
             <div id="UrlErrorDialog">
-                <p>You have to enter an valid url.</p>
+                <p>You have to enter an valid url starting with http:// or https://.</p>
             </div>
             <div id="KeywordsErrorDialog">
                 <p>
