--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
             </div>
             <div class="box filter">
                 <h2>Markierung der Webseiten Besucher</h2>
-                <p>Es gibt drei Möglichkeiten Besucher für das Retargeting zu markieren. Mittels eines JavaScripts, eines Pixels, oder einer Klick-URL. Nutzen Sie bitte den oben befindlichen Generator, um einen Code-Schnipsel oder eine URL zusammenzubauen.</p>
-                <p>Die Javascript-Einbindung führt wie die Pixeleinbindung beim Seitenaufruf zu einer Markierung des Besuchers mit den gewünschten Retargeting-Keywords. Die Javascript-Variante ist jedoch flexibler und dieser sollte, sofern das möglich ist, der Vorzug gegeben werden.</p>
+                <p>Es gibt zwei Möglichkeiten Besucher für das Retargeting zu markieren. Mittels eines JavaScripts oder einer Klick-URL. Nutzen Sie bitte den oben befindlichen Generator, um einen Code-Schnipsel oder eine URL zusammenzubauen.</p>
+                <p>Die Javascript-Einbindung führt beim Seitenaufruf zu einer Markierung des Besuchers mit den gewünschten Retargeting-Keywords.</p>
                 <p>Die Klick-URL kann an einen beliebigen Link angefügt werden. Sie besteht aus einer frei wählbaren Ziel-URL und den entsprechenden Retargeting-Keywords. Klickt ein Besucher auf den Link wird er zuerst markiert und daraufhin an die  Ziel-URL weitergeleitet.</p>
-                <p>Wo Sie das JavaScript, den Pixel oder die Click-URL einbinden und welche Informationen sie speichern wollen, sprechen Sie bitte mit Ihrem Ansprechpartner bei Adcloud ab. Diesen können Sie auch konsultieren, wenn eine HTTPS-Variante gewünscht ist.</p>
+                <p>Wo Sie das JavaScript oder die Klick-URL einbinden und welche Informationen sie speichern wollen, sprechen Sie bitte mit Ihrem Ansprechpartner bei Adcloud ab. Diesen können Sie auch konsultieren, wenn eine HTTPS-Variante gewünscht ist.</p>
                 <h2>Keywords</h2>
                 <p>Die Keywords können frei gewählt werden. Wird ein Benutzer mit einem Keyword markiert, können Kampagnen zu diesem Keyword ausgeliefert werden. Wird ein Benutzer mit mehreren Keywords markiert können verschiedene Kampagnen präsentiert werden.</p>
                 <p>Grundsätzlich gilt: Sobald ein Keyword des Benutzers mit einem Keyword einer Kampagne übereinstimmt, kann diese Kampagne präsentiert werden. Ob die Kampagne tatsächlich angezeigt wird, ist abhängig von der jeweiligen Performance.</p>
