--- a/index.html
+++ b/index.html
@@ -20,44 +20,44 @@
         <div id='header'>
         </div>
         <div id='content'>
-            <h2>Retargeting code generator</h2>
+            <h2>Code für Retargeting Markierung</h2>
 
             <div id="tabs" class="filter">
                 <ul>
-                    <li><a href="#PageViewRetargeting">PageViewRetargeting</a></li>
-                    <li><a href="#ClickRetargeting">ClickRetargeting</a></li>
+                    <li><a href="#PageViewRetargeting">Markierung durch Seitenaufruf</a></li>
+                    <li><a href="#ClickRetargeting">Markierung durch Klick</a></li>
                 </ul>
                 <div id="PageViewRetargeting">
                     <div id='left'>
                         <div class="input">
-                            <label for='CompanyId'>Enter an company id</label>
+                            <label for='CompanyId'>Ihre Adcloud Cloud-ID</label>
                             <input id='CompanyId' class='CompanyId' type='text'/>
                         </div>
                         <div class="input">
-                            <label for='keywords'>Enter your keywords comma separated</label>
+                            <label for='keywords'>Ihre Keywords getrennt durch Komma</label>
                             <input id='keywords' class='keywords' type='text'/>
                         </div>
                         <div class="submit">
-                            <input class='generate' type='submit' value='Generate'/>
+                            <input class='generate' type='submit' value='Erzeuge Code'/>
                         </div>
                     </div>
                     <div id='right'>
-                        <label for='url'>Here is your retargeting url</label>
+                        <label for='url'>JavaScript Markierungscode</label>
                         <textarea id='url' class='code'></textarea>
                     </div>
                 </div>
                 <div id="ClickRetargeting">
                     <div id='left'>
                         <div class="input">
-                            <label for='CompanyId'>Enter an company id</label>
+                            <label for='CompanyId'>Ihre Adcloud Cloud-ID</label>
                             <input id='CompanyId' class='CompanyId' type='text'/>
                         </div>
                         <div class="input">
-                            <label for='url'>Enter your target url</label>
+                            <label for='url'>Ihre Ziel-URL</label>
                             <input id='url' class='url' type='text' name='url'/>
                         </div>
                         <div class="input">
-                            <label for='keywords'>Enter your keywords comma separated</label>
+                            <label for='keywords'>Ihre Keywords getrennt durch Komma</label>
                             <input id='keywords' class='keywords' type='text'/>
                         </div>
                         <div class="submit">
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                     <div id='right'>
-                        <label for='url'>Here is your retargeting url</label>
+                        <label for='url'>Markierungs-URL</label>
                         <textarea id='url' class='code'></textarea>
                     </div>
                 </div>
