fixed wrong event dispatching

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
             <div id="tabs" class="filter">
                 <ul>
-                    <li><a href="#PageViewRetargeting">Markierung durch Seitenaufruf</a></li>
-                    <li><a href="#ClickRetargeting">Markierung durch Klick</a></li>
+                    <li><a class='PageViewRetargeting' href="#PageViewRetargeting">Markierung durch Seitenaufruf</a></li>
+                    <li><a class='ClickRetargeting' href="#ClickRetargeting">Markierung durch Klick</a></li>
                 </ul>
                 <div id="PageViewRetargeting">
                     <div id='left'>
